--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,10 +3,12 @@ spring.application.name=8bitcafeclub
 
 
 
-# データベース接続設定
-spring.datasource.url=jdbc:mysql://127.0.0.1:3306/8bitcafeclub?useUnicode=true&characterEncoding=utf8&serverTimezone=Asia/Tokyo
+# \u30c7\u30fc\u30bf\u30d9\u30fc\u30b9\u63a5\u7d9a\u8a2d\u5b9a
+spring.datasource.url=jdbc:mysql://127.0.0.1:3306/8bitcafedb?useUnicode=true&characterEncoding=utf8&serverTimezone=Asia/Tokyo
 spring.datasource.username=root
 spring.datasource.password=
-# MyBatis の設定
+mybatis.type-aliases-package=com.example.app.domain
+
+# MyBatis \u306e\u8a2d\u5b9a
 mybatis.mapper-locations=classpath*:/mybatis/**/*.xml
 mybatis.configuration.map-underscore-to-camel-case=true
