--- a/src/main/resources/validation.properties
+++ b/src/main/resources/validation.properties
@@ -9,3 +9,5 @@ name=\u6c0f\u540d
 age=\u5e74\u9f62
 address=\u4f4f\u6240
 loginId=\u30ed\u30b0\u30a4\u30f3 ID
+title=\u30bf\u30a4\u30c8\u30eb
+article=\u5185\u5bb9
